force-app/main/default/objects/LGL_Service_Item__c/LGL_Service_Item__c.object-meta.xml
<CustomObject>
    <description>Represents a particular service request for an offered service</description>
    <label>Service Item</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Service Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>