force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Checkout_Time__c.field-meta.xml
<CustomField>
    <fullName>LGL_Checkout_Time__c</fullName>
    <description>Represents the hour in when the service finished (because of Luggage collection, loan return, etc.)</description>
    <label>Checkout Time</label>
    <type>DateTime</type>
</CustomField>