force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>LGL_Deposit_Status__c</fullName>
    <description>Represents the deposit status for a service item</description>
    <label>Deposit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ND</fullName>
                <label>No Deposit</label>
            </value>
            <value>
                <fullName>DT</fullName>
                <label>Deposit Taken</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>