force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Full_Luggage__c.field-meta.xml
<CustomField>
    <fullName>LGL_Full_Luggage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates, in case of a luggage, that it&apos;s a full Luggage</description>
    <label>Full Luggage?</label>
    <type>Checkbox</type>
</CustomField>