force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Likely_To_Recommend__c.field-meta.xml
<CustomField>
    <fullName>LGL_Likely_To_Recommend__c</fullName>
    <description>Indicator of guest satisfaction with the service. We don&apos;t use the Gues Survey Feedback data because:

-Exists a Master-Detail relationship with the Case object and we don&apos;t always have a Case
-It&apos;s easier to use the information if it&apos;s at Service Item level. Because there is no 1-N relation, is just 1-1, there is no need for a separate object</description>
    <label>Likely To Recommend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>