force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Dwell_Time__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Dwell_Time__c</fullName>
    <formula>IF(
LGL_Checkout_Time__c - CreatedDate &gt; 0 ,
TEXT( FLOOR( MOD( (LGL_Checkout_Time__c - CreatedDate ) * 24, 24 ) ) ) &amp; &quot; h &quot;
&amp; TEXT( ROUND( MOD( (LGL_Checkout_Time__c - CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; min&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Dwell Time</label>
    <type>Text</type>
</CustomField>