force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Item_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Item_Creation_Date__c</fullName>
    <description>Formula field created in order to visualize creation date in reports. This is needed because the CreatedDate field displays as a date (not a datetime) in reports</description>
    <formula>CreatedDate</formula>
    <label>Service Item Creation Date</label>
    <type>DateTime</type>
</CustomField>