force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Item_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Item_Identifier__c</fullName>
    <description>Represents the identifier for the service. The value depends on what the service is (could be a Key Number or an Equipment Asset Number, etc)</description>
    <label>Service Item Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>