force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Name__c</fullName>
    <description>Displays the name of the service which the Service Item points to</description>
    <formula>LGL_Service_Offering__r.LGL_Service_Type__r.Name</formula>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>