force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Offering__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Offering__c</fullName>
    <label>Service Offering</label>
    <referenceTo>LGL_Service_Offering__c</referenceTo>
    <relationshipLabel>Service Items</relationshipLabel>
    <relationshipName>Service_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>