force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>LGL_Service__c</referenceTo>
    <relationshipLabel>Service Items</relationshipLabel>
    <relationshipName>Service_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>