force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Type__c</fullName>
    <description>Field used to be able to Roll-Up Summary based on Service Type</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>luggage</fullName>
            </value>
            <value>
                <fullName>loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>