force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Service_Type_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LGL_Service_Type_Identifier__c</fullName>
    <description>Formula field to be able to have at Service Item lvl the Identifier for the Service Type</description>
    <formula>LGL_Service_Offering__r.LGL_Service_Type__r.LGL_Service_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type Identifier</label>
    <type>Text</type>
</CustomField>