force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Status__c.field-meta.xml
<CustomField>
    <fullName>LGL_Status__c</fullName>
    <description>Represents the status of the Service Item</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>using</fullName>
                <label>In Use</label>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>