force-app/main/default/objects/LGL_Service_Item__c/fields/LGL_Type__c.field-meta.xml
<CustomField>
    <fullName>LGL_Type__c</fullName>
    <description>Created to sepecify the type of the Luggage Service</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>smallSuitcase</fullName>
                <label>Small Suitcase</label>
            </value>
            <value>
                <fullName>mediumSuitcase</fullName>
                <label>Medium Suitcase</label>
            </value>
            <value>
                <fullName>largeSuitcase</fullName>
                <label>Large Suitcase</label>
            </value>
            <value>
                <fullName>backpack</fullName>
                <label>Backpack</label>
            </value>
            <value>
                <fullName>handbag</fullName>
                <label>Handbag</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>